# tic-tac-toe

./: .editorconfig  .flake8  .gitignore  Makefile  README.md  manage.py  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: main.yml
deploy/: docker-compose.yml
deploy/api/: Dockerfile  apply-django-migrations.sh  start-autotests.sh  start-django-dev.sh  start-django-uvicorn.sh
tictactoe/: asgi.py  conftest.py  settings.py  urls.py  wsgi.py
tictactoe/game/: admin.py  apps.py  models.py  rules.py
tictactoe/game/api/: serializers.py  urls.py  views.py
tictactoe/game/migrations/: 0001_initial.py
tictactoe/game/tests/: factories.py  test_rules.py  test_views.py
