[tool.poetry]
name = "tic-tac-toe"
version = "0.1.0"
description = ""
authors = ["Eugene Morozov <jmv@emorozov.net>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"
djangorestframework = "^3.14.0"
django-extensions = "^3.2.1"
drf-spectacular = "^0.25.1"
uvicorn = "^0.20.0"

[tool.poetry.dev-dependencies]
ipython = "^8.8.0"
flake8 = "^6.0.0"
pytest = "^7.2.1"
pytest-django = "^4.5.2"
django-stubs = "^1.14.0"
djangorestframework-stubs = "^1.8.0"
factory-boy = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
